Define MongoDB connection properties

--- a/reader/src/main/resources/application.properties
+++ b/reader/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+# MongoDB settings
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=root
+spring.data.mongodb.password=example
+spring.data.mongodb.database=reader
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
