--- a/reader/src/main/resources/openapi/requests/requestBodies.yaml
+++ b/reader/src/main/resources/openapi/requests/requestBodies.yaml
@@ -4,3 +4,9 @@ CreateNewsBody:
     application/json:
       schema:
         $ref: '../models/news.yaml#/CreateNews'
+UpdateNewsBody:
+  description: A payload for updating an existing News
+  content:
+    application/json:
+      schema:
+        $ref: '../models/news.yaml#/UpdateNews'
