--- a/reader/src/main/resources/openapi/models/news.yaml
+++ b/reader/src/main/resources/openapi/models/news.yaml
@@ -26,6 +26,28 @@ CreateNews:
       minLength: 1
       maxLength: 150
       example: "example of text"
+ReadNews:
+  allOf:
+    - $ref: 'common.yaml#/BaseReadView'
+  type: object
+  properties:
+    title:
+      type: string
+      example: "News In The Local Area"
+      maximum: 70
+    photo_url:
+      type: string
+      format: url
+      example: "https://miro.medium.com/max/2400/1*mk1-6aYaf_Bes1E3Imhc0A.jpeg"
+    description:
+      type: string
+      example: "Gas turn off"
+    source:
+      type: string
+      example: "https://example.com"
+    text:
+      type: string
+      example: "example of text"
 UpdateNews:
   type: object
   required:
