--- a/reader/src/main/resources/openapi/models/common.yaml
+++ b/reader/src/main/resources/openapi/models/common.yaml
@@ -7,3 +7,11 @@ ApiError:
     error_message:
       type: string
       example: "example"
+
+BaseReadView:
+  type: object
+  properties:
+    id:
+      type: integer
+      format: int64
+      example: 1
