Added worked docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,37 @@
-version: '3'
+version: '3.1'
+
 services:
   zookeeper:
-    image: wurstmeister/zookeeper
+    image: bitnami/zookeeper
+    restart: always
     ports:
       - "2181:2181"
-    networks:
-      - javelin
+    volumes:
+      - "zookeeper_data:/bitnami"
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
   kafka:
-    image: wurstmeister/kafka
+    image: bitnami/kafka
     ports:
       - "9092:9092"
+    restart: always
+    volumes:
+      - "kafka_data:/bitnami"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
-    networks:
-      - javelin
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+    depends_on:
+      - zookeeper
+
+volumes:
+  zookeeper_data:
+    driver: local
+  kafka_data:
+    driver: local
+
 networks:
-  javelin:
-    external: false
-    name: javelin
-    driver: bridge
+  default:
+    external:
+      name: javelin
