--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <!--Spring dependencies versioning-->
         <spring.boot.version>2.6.7</spring.boot.version>
         <spring-kafka.version>2.8.5</spring-kafka.version>
-
+        <spring-data-jpa.version>2.5.11</spring-data-jpa.version>
 
         <!--Other dependencies properties-->
         <assertj-core.version>3.16.1</assertj-core.version>
@@ -113,6 +113,11 @@
                 <groupId>org.springframework.kafka</groupId>
                 <artifactId>spring-kafka</artifactId>
                 <version>${spring-kafka.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-jpa</artifactId>
+                <version>${spring-data-jpa.version}</version>
             </dependency>
 
             <!--Other dependencies -->
