--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,11 @@
     <packaging>pom</packaging>
 
     <modules>
-
+        <module>gateway-spring-cloud</module>
     </modules>
 
     <properties>
         <!--Maven properties-->
-        <git_commit_sha>default</git_commit_sha>
         <java.version>11</java.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -27,15 +26,14 @@
         <revision.patch>1</revision.patch>
         <ci_revision>-SNAPSHOT</ci_revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <docker.revision>latest</docker.revision>
 
         <!--Dependencies properties-->
+
         <!--Spring dependencies versioning-->
         <spring.boot.version>2.6.7</spring.boot.version>
         <spring-cloud-starter-gateway.version>3.1.2</spring-cloud-starter-gateway.version>
         <spring-kafka.version>2.8.5</spring-kafka.version>
-
 
         <!--Other dependencies properties-->
         <assertj-core.version>3.16.1</assertj-core.version>
@@ -68,7 +66,6 @@
         <openapi-generator-maven-plugin.version>5.1.0</openapi-generator-maven-plugin.version>
         <swagger-codegen-maven-plugin.version>3.0.26</swagger-codegen-maven-plugin.version>
     </properties>
-
 
     <!--Profiles section-->
 
@@ -317,5 +314,4 @@
             </plugins>
         </pluginManagement>
     </build>
-
 </project>
