--- a/reader/src/main/resources/application.properties
+++ b/reader/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.data.mongodb.password=example
 spring.data.mongodb.database=reader
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+
+server.port=8080
