--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <packaging>pom</packaging>
 
     <modules>
-
+        <module>reader</module>
     </modules>
 
     <properties>
@@ -31,7 +31,7 @@
 
         <!--Dependencies properties-->
         <!--Spring dependencies versioning-->
-        <spring.boot.version>2.6.7</spring.boot.version>
+        <spring.boot.version>2.3.8.RELEASE</spring.boot.version>
         <spring-kafka.version>2.8.5</spring-kafka.version>
         <spring-data-jpa.version>2.5.11</spring-data-jpa.version>
 
@@ -40,6 +40,7 @@
         <jackson-annotations.version>2.12.3</jackson-annotations.version>
         <jackson-core.version>2.12.3</jackson-core.version>
         <jackson-databind.version>2.12.3</jackson-databind.version>
+        <javax.persistence-api.version>2.2</javax.persistence-api.version>
         <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
         <jersey-client.version>3.0.4</jersey-client.version>
         <jersey-media-json-jackson.version>3.0.4</jersey-media-json-jackson.version>
@@ -50,11 +51,16 @@
         <mockito-core.version>3.3.3</mockito-core.version>
         <modelMapper.version>2.4.4</modelMapper.version>
         <postgresql.verson>42.2.16</postgresql.verson>
+        <query-apt.version>5.0.0</query-apt.version>
+        <query-mongodb.version>5.0.0</query-mongodb.version>
+        <reflections.version>0.10.2</reflections.version>
         <swagger-parser-v3.version>2.0.26</swagger-parser-v3.version>
         <validation-api.version>2.0.1.Final</validation-api.version>
 
         <!--Plugins properties-->
+        <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
         <checkstyle.version>8.41</checkstyle.version>
+        <!--suppress UnresolvedMavenProperty -->
         <checkstyle.configLocation>
             ${maven.multiModuleProjectDirectory}/.github/checkstyle-configuration.xml
         </checkstyle.configLocation>
@@ -133,6 +139,11 @@
                 <version>${validation-api.version}</version>
             </dependency>
             <dependency>
+                <groupId>javax.persistence</groupId>
+                <artifactId>javax.persistence-api</artifactId>
+                <version>${javax.persistence-api.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>javax.ws.rs</groupId>
                 <artifactId>javax.ws.rs-api</artifactId>
                 <version>${javax.ws.rs-api.version}</version>
@@ -190,6 +201,21 @@
                 <artifactId>postgresql</artifactId>
                 <version>${postgresql.verson}</version>
             </dependency>
+            <dependency>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-apt</artifactId>
+                <version>${query-apt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-mongodb</artifactId>
+                <version>${query-mongodb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.reflections</groupId>
+                <artifactId>reflections</artifactId>
+                <version>${reflections.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -201,6 +227,11 @@
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                <groupId>com.mysema.maven</groupId>
+                <artifactId>apt-maven-plugin</artifactId>
+                <version>${apt-maven-plugin.version}</version>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
