--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
         <!--Dependencies properties-->
         <!--Spring dependencies versioning-->
-        <spring.boot.version>2.3.8.RELEASE</spring.boot.version>
+        <spring.boot.version>2.6.7</spring.boot.version>
         <spring-kafka.version>2.8.5</spring-kafka.version>
         <spring-data-jpa.version>2.5.11</spring-data-jpa.version>
 
