--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <assertj-core.version>3.16.1</assertj-core.version>
         <jackson-annotations.version>2.12.3</jackson-annotations.version>
         <jackson-core.version>2.12.3</jackson-core.version>
+        <jackson-databind-nullable.version>0.2.2</jackson-databind-nullable.version>
         <jackson-databind.version>2.12.3</jackson-databind.version>
         <javax.persistence-api.version>2.2</javax.persistence-api.version>
         <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
@@ -54,7 +55,9 @@
         <query-apt.version>5.0.0</query-apt.version>
         <query-mongodb.version>5.0.0</query-mongodb.version>
         <reflections.version>0.10.2</reflections.version>
+        <swagger-annotations.version>1.6.6</swagger-annotations.version>
         <swagger-parser-v3.version>2.0.26</swagger-parser-v3.version>
+        <springfox-core.version>3.0.0</springfox-core.version>
         <validation-api.version>2.0.1.Final</validation-api.version>
 
         <!--Plugins properties-->
@@ -139,6 +142,11 @@
                 <version>${validation-api.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.openapitools</groupId>
+                <artifactId>jackson-databind-nullable</artifactId>
+                <version>${jackson-databind-nullable.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>javax.persistence</groupId>
                 <artifactId>javax.persistence-api</artifactId>
                 <version>${javax.persistence-api.version}</version>
@@ -215,6 +223,16 @@
                 <groupId>org.reflections</groupId>
                 <artifactId>reflections</artifactId>
                 <version>${reflections.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger-annotations.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-core</artifactId>
+                <version>${springfox-core.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
